# arbiter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/router/: __init__.py  backend.py  budget.py  classify.py  cli.py  observability.py  router.py
src/router/backends/: mock.py  sqlite.py
src/router/evals/: __init__.py  harness.py
src/router/evals/datasets/: example.jsonl
tests/: test_evals.py  test_fallback.py  test_hardpaths.py  test_observability.py  test_routing.py  test_sqlite.py
