[project]
name = "arbiter"
version = "0.1.0"
description = "Query router with classification, parallel fan-out/merge, a graceful fallback ladder, latency/cost budgeting, an eval harness, and tracing."
requires-python = ">=3.11"
# No runtime dependencies — the engine is standard library only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# Real LLM / observability backends
llm = [
    "langgraph>=0.2",
    "langsmith>=0.1",
]

[project.scripts]
route = "router.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/router"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
